# tinyexpr-plusplus

./: .clang-format  .clang-tidy  .gitignore  CompatibilityAdvisory.md  Embedded.md  Examples.md  README.md  TinyExprChanges.md  repl.cpp  smoke.cpp  tinyexpr.cpp  tinyexpr.h
.github/workflows/: codeql.yml  cppcheck.yml  doxygen.yml  i18n-check.yml  macos-unit-tests.yml  msvc.yml  msw-unit-tests.yml  spell-check.yml  unit-tests.yml
doc/: Doxyfile  tinyexpr_logo.xcf
doc/manual/: 09-EndUserUsage.Rmd  10-Operators.Rmd  11-Functions.Rmd  12-Constants.Rmd  13-Comments.Rmd  20-Building.Rmd  21-Usage.Rmd  22-Examples.Rmd  23-CustomExtensions.Rmd  24-NonUSFormulas.Rmd  25-TechnicalOverview.Rmd  26-CompileTimeOptions.Rmd  27-Embedded.Rmd  40-Appendix.Rmd  _output.yml  cites.bib  index.Rmd
doc/manual/_book/: 404.html  building.html  comments.html  compile-time-options.html  constants.html  custom-extensions.html  embedded-programming.html  examples.html  functions.html  how-it-works.html  index.html  non-us-formatted-formulas.html  operators.html  references.html  search_index.json  usage-1.html  usage.html
doc/manual/latex/: creative-commons.tex  default.tex  preamble.tex  titlepage.tex
docs/: 404.html  Appendix.html  Doxyfile  building.html  comments.html  compile-time-options.html  constants.html  custom-extensions.html  embedded-programming.html  embedded.html  end-user-usage.html  example.html  examples.html  functions.html  how-it-works.html  index.html  non-us-formatted-formulas.html  non-us-formulas.html  operators.html  overview.html  reference-keys.txt  references.html  search_index.json  technical-overview.html  tinyexpr_logo.xcf  unknown-symbol-resolution.html  usage-1.html  usage.html  usr.html
docs/manual/: 09-EndUserUsage.Rmd  09-EndUserUsage.qmd  10-Operators.Rmd  11-Functions.Rmd  11-Functions.qmd  12-Constants.Rmd  13-Comments.Rmd  20-Building.Rmd  20-Building.qmd  21-Usage.Rmd  22-Examples.Rmd  23-CustomExtensions.Rmd  24-NonUSFormulas.Rmd  24-UnknownSymbolResolution.Rmd  24-UnknownSymbolResolution.qmd  25-TechnicalOverview.Rmd  26-CompileTimeOptions.Rmd  26-NonUSFormulas.Rmd  27-Embedded.Rmd  27-TechnicalOverview.Rmd  28-CompileTimeOptions.Rmd  28-CompileTimeOptions.qmd  29-Embedded.Rmd  ManualCover.xcf  _bookdown.yml  _output.yml  _quarto.yml  appendix.qmd  building.qmd  cites.bib  comments.qmd  compile-time-options.qmd  constants.qmd  custom-extensions.qmd  embedded-programming.qmd  embedded.qmd  end-user-usage.qmd  functions.qmd  index.Rmd  index.qmd  (+6 more)
docs/manual/latex/: author-bio.tex  default.tex  indexstyles.ist  preamble.tex
docs/site_libs/bootstrap/: bootstrap.min.css
tests/: CMakeLists.txt  fuzz_test.cpp  testingmain.cpp  tetests.cpp
tests/cmake_modules/: CodeCoverage.cmake
tests/demo/: CMakeLists.txt  tedemo.cpp
